# Real-Time-Chat-App

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  generate_migrations.sh  main.py  purge_dev.ps1  purge_dev.sh  pyproject.toml  requirements.txt  start_dev.ps1  start_dev.sh
scripts/: migrations.sh  setup.py
src/alembic/: env.py
src/alembic/versions/: 082611a4bd67_init.py  27e73d39970e_.py  43357a9030cc_.py  558ee2013e68_.py  5a01a825b098_init.py  5fe414692719_.py  668a02b27f6b_init.py  9effb1223803_.py  a17180f6b8e2_init.py  a738c4e5e169_.py  b993bc00801c_.py  bbacfc8b7b5a_.py  c09855f64752_init.py  dc81394d60fc_.py  dca4a02ef50c_.py  e42a42399923_.py
src/api/api_current/auth/: authentication.py
src/api/api_current/endpoints/: chat.py
src/api/v1/auth/: MFA.py  authentication.py  profile_managment.py  webauthn.py
src/api/v1/endpoints/: chat.py  direct_messages.py  healthcheck.py  main_router.py
src/api/v1/utils/: render.py  render_MFA.py  render_auth.py  render_pass_flow.py
src/core/config/: auth_config.py  config.py  logger.py  models.py
src/core/dependencies/: auth_injection.py  chat_injection.py  db_injection.py
src/core/exceptions/: auth_exception.py  except_catcher.py
src/core/middleware/: middleware.py
src/core/schemas/: User.py  auth_schema.py  chat_schema.py  message_shema.py  template_schema.py
src/core/services/auth/: token_service.py  user_service.py
src/core/services/auth/application/use_cases/: login_use_case.py
src/core/services/auth/domain/interfaces/: AuthRepo.py  EmailRepo.py  HashService.py  TokenRepository.py  TokenService.py  UserRepo.py  UserRepoAuth.py  __init__.py
src/core/services/auth/domain/models/: refresh_token.py  user.py
src/core/services/auth/infrastructure/: __init__.py
src/core/services/auth/infrastructure/repositories/: DatabaseTokenRepository.py
src/core/services/auth/infrastructure/services/: AuthProvider.py  Bcryptprovider.py  EmailService.py  JWTService.py  UserService.py  User_Crud.py
src/core/services/cache/: auth_redis.py  redis.py
src/core/services/chat/: chat_manager.py
src/core/services/chat/domain/interfaces/: ChatManagerRepo.py  ChatRepo.py  DBRepo.py  (+2 more)
src/core/services/database/models/: base.py  chat.py  refresh_token.py  user.py
src/core/services/database/orm/: celery_orm.py  chat_orm.py  token_crud.py  user_orm.py
src/core/services/tasks/: celery.py  celery_app.py  db_tasks.py  email_task.py  task_health.py  taskiq_broker.py
src/frontend/menu/: urls.py
src/frontend/templates/: 404.html  OTP.html  PASS.html  base.html  chat.html  direct_msg.html  generic_answer.html  index.html  js.html  rooms.html
src/frontend/templates/includes/: menu.html
src/frontend/templates/users/: login.html  logout.html  password_change.html  password_reset.html  profile.html  register.html  register_success.html
src/utils/: file_uploader.py  prepared_response.py  time_check.py
tests/: selenium_test.py  test_main.py
(+6 files in other folders)
