[project]
name = "real-time-chat"
version = "0.0.1"
description = ""
authors = [
    {name = "Marsel",email = "hasanovmarsel26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pycryptodome (>=3.23.0,<4.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "amqp (>=5.3.1,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "authlib (>=1.6.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "eventlet (>=0.40.0,<0.41.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
