[project]
name = "real-time-chat"
version = "0.0.1"
description = ""
authors = [
    {name = "Marsel",email = "hasanovmarsel26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pycryptodome (>=3.23.0,<4.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "amqp (>=5.3.1,<6.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "authlib (>=1.6.0,<2.0.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "eventlet (>=0.40.0,<0.41.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "redis (>=6.2.0,<7.0.0)",
    "selenium (>=4.34.0,<5.0.0)",
    "celery-pool-asyncio (>=0.2.0,<0.3.0)",
    "webauthn (>=2.6.0,<3.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "qrcode (>=8.2,<9.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "celery[asyncio] (>=5.3.0)",
    "gevent (>=25.5.1,<26.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
